--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"i18next": "^25.2.1",
+		"i18next-browser-languagedetector": "^8.2.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-i18next": "^15.5.3",
 		"react-router-dom": "^7.6.2"
 	},
 	"devDependencies": {
